// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uikit/Box should render correctly 1`] = `
<div
  className="box justify_center"
  style={
    Object {
      "flex": undefined,
      "flexDirection": undefined,
      "margin": 8,
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "order": undefined,
      "padding": 16,
    }
  }
>
  Box
</div>
`;

exports[`uikit/Box should render correctly without inject shorthand 1`] = `
<span
  className="box justify_center"
  style={
    Object {
      "flex": undefined,
      "flexBasis": "50%",
      "flexDirection": undefined,
      "flexGrow": "1",
      "flexShrink": "1",
      "margin": "16px 16px 32px 0 ",
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "order": undefined,
      "padding": "16px 16px 32px 0 ",
    }
  }
>
  Box incorrect
</span>
`;
